Small heading fix
Header's borders were getting too small

--- a/resources/public/css/app.css
+++ b/resources/public/css/app.css
@@ -134,6 +134,7 @@ span.nav-link.active {
     font-size: 4em;
     border-bottom: 5px solid white;
     width: 25%;
+    min-width: 130px;
     text-align: center;
 }
 
